--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-js-modal": "^1.3.13",
     "vue-switches": "^2.0.1"
   },
   "browserslist": [
